--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <title>UX/UI Bootstrap Template</title>
   </head>
   <body>
+
     <!-- Paste Navigation Code Below -->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,12 +27,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">case studies</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item">
+            <a class="nav-link" href="#">about</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">connect</a>
+          </li>
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
             </a>
@@ -41,18 +48,22 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
-          </li>
-          <li class="nav-item">
+          </li> -->
+          <!-- <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
+          </li> -->
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <!-- <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> -->
       </div>
     </nav>
+
+
+
     <!-- Paste Jumbotron Code Below-->
+
     <div class="jumbotron">
       <h1 class="display-4">Hello, world!</h1>
       <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
@@ -60,8 +71,12 @@
       <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
       <a class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal" role="button">Learn more</a>
     </div>
-    <!-- Add columns, rows, and cards Below -->
-<div class="container-fluid">
+
+
+
+<!-- Add columns, rows, and cards Below -->
+
+<div class="container-fluid cardRow">
 <div class="row">
 <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
   <div class="card">
@@ -108,10 +123,9 @@
 
 
 
-
 <!-- Carousel -->
 
-<section class="container-fluid">
+<!-- <section class="container-fluid">
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -142,13 +156,13 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 
 <!-- Form group -->
 
-<section class="container-fluid, sign-up">
+<!-- <section class="container-fluid, sign-up">
   <div class="row">
 
     <form>
@@ -169,15 +183,14 @@
     </form>
 
   </div>
-
-
-</section>
+</section> -->
 
 
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+<!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -210,12 +223,8 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
-
-
-
-<!-- Carousel -->
 
 
 
